tests/should_fail/syntax_param_missing_colon.nv
module main

// SHOULD FAIL: parameter without type annotation (missing colon)
fn bad(x Int) -> Int {
    return x
}
println(bad(1))
